2.0-M8 in progress... refactoring and redoing of the ComponentMappingTable for better dependency injection